change made to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PROVISIONER_PASSWORD_FILE=./secrets/provisioner_password
+PROVISIONER_PASSWORD_FILE=~/.step/secrets/provisioner_password
 
 CRT_STEP_INIT_NAME="wireguardCRT"
 CRT_STEP_INIT_DNS="localhost wireguard.local"
